successfully got a reply from the server

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
     "next": "^5.1.0",
+    "node-fetch": "^2.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
