--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
+    "moment": "^2.21.0",
     "next": "^5.1.0",
     "node-fetch": "^2.1.2",
     "react": "^16.2.0",
