--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "^5.1.0",
     "node-fetch": "^2.1.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "recompose": "^0.26.0"
   },
   "devDependencies": {},
   "scripts": {
